different dining greeting and change to use mplayer instead of mp3123

--- a/config.json
+++ b/config.json
@@ -998,7 +998,7 @@
                     "Dining Room Lamps"
                 ]
             },
-            "greeting": "/home/pi/Assistant/media/handlink.ogg"
+            "greeting": "/home/pi/Assistant/media/tos_shipannouncement.mp3"
         }
     }
 }
