--- a/config.json
+++ b/config.json
@@ -998,7 +998,7 @@
                     "Dining Room Lamps"
                 ]
             },
-            "greeting": "/home/pi/Assistant/media/tos_shipannouncement.mp3"
+            "greeting": "/home/pi/Assistant/media/tos_shipannouncement.ogg"
         }
     }
 }
