added manual esp433 stuff

--- a/config.json
+++ b/config.json
@@ -890,54 +890,68 @@
 
         },
         "esp433Generic": {
-            "a_on": "",
-            "a_off": "",
-            "b_on": "",
-            "b_off": "",
-            "c_on": "",
-            "c_off": "",
-            "d_on": "",
-            "d_off": "",
-            "e_on": "",
-            "e_off": "",
-            "all_on": "",
-            "all_off": "",
-            "attempts":3,
-            "length":24
+            "a_on": "3444434333343333443344443",
+            "a_off": "3444434333343333443344433",
+            "b_on": "3444434333343333443344343",
+            "b_off": "3444434333343333443344333",
+            "c_on": "3444434333343333443343443",
+            "c_off": "3444434333343333443343433",
+            "d_on": "3444434333343333443334443",
+            "d_off": "3444434333343333443334433",
+            "e_on": "3444434333343343443334443",
+            "e_off": "3444434333343343443334433",
+            "all_on": "3444434333343333443333433",
+            "all_off": "3444434333343333443333343",
+            "shortOnDelay": "0.00032",
+            "shortOffDelay": "0.00032",
+            "longOnDelay": "0.00090",
+            "longOffDelay": "0.00090",
+            "bigOn": "0",
+            "bigOff": "0",
+            "extendedDelay": "0.0096",
+            "endDelay": "0.0087",
+            "manual": true
         },
         "esp433Energenie": {
-            "energeniea_on": "",
-            "energeniea_off": "",
-            "energenieb_on": "",
-            "energenieb_off": "",
-            "energeniec_on": "",
-            "energeniec_off": "",
-            "energenied_on": "",
-            "energenied_off": "",
-            "energeniee_on": "",
-            "energeniee_off": "",
-            "energenief_on": "",
-            "energenief_off": "",
-            "energenieg_on": "",
-            "energenieg_off": "",
-            "energenieall_on": "",
-            "energenieall_off": "",
+            "energeniea_on": "62",
+            "energeniea_off": "60",
+            "energenieb_on": "46",
+            "energenieb_off": "44",
+            "energeniec_on": "54",
+            "energeniec_off": "52",
+            "energenied_on": "38",
+            "energenied_off": "36",
+            "energeniee_on": "102",
+            "energeniee_off": "100",
+            "energenief_on": "126",
+            "energenief_off": "124",
+            "energenieg_on": "4194342",
+            "energenieg_off": "4194340",
+            "energenieall_on": "58",
+            "energenieall_off": "56",
             "attempts":3,
             "length":24
         },
         "esp433X10": {
-            "x10a_on": "",
-            "x10a_off": "",
-            "x10b_on": "",
-            "x10b_off": "",
-            "x10c_on": "",
-            "x10c_off": "",
-            "x10d_on": "",
-            "x10d_off": "",
-            "x10dim": "",
-            "x10bright": "",
-            "attempts":3,
-            "length":24
+            "x10a_on": "2133111113113333311111111333333333",
+            "x10a_off": "2133111113113333311311111331333333",
+            "x10b_on": "2133111113113333311131111333133333",
+            "x10b_off": "2133111113113333311331111331133333",
+            "x10c_on": "2133111113113333311113111333313333",
+            "x10c_off": "2133111113113333311313111331313333",
+            "x10d_on": "2133111113113333311133111333113333",
+            "x10d_off": "2133111113113333311333111331113333",
+            "x10dim": "2133111113113333331133111133113333",
+            "x10bright": "2133111113113333331113111133313333",
+            "shortOnDelay": "0.00055",
+            "shortOffDelay": "0.00055",
+            "longOnDelay": "0.00170",
+            "longOffDelay": "0.00170",
+            "bigOn": "0.00950",
+            "bigOff": "0.00500",
+            "extendedDelay": "0.01915",
+            "endDelay": "0.01745",
+            "manual": true
         },
         "esp433twelvevolt": {
             "waterfall_on": "",
