--- a/config.json
+++ b/config.json
@@ -169,7 +169,7 @@
             ]
         },
 	{
-            "name": "Christmas Lights",
+            "name": "Hall Christmas Lights",
             "ids": [
                 "d_"
             ],
