--- a/config.json
+++ b/config.json
@@ -1258,6 +1258,9 @@
         "thelights": [
           "Bedroom Lights"
         ],
+	"thelight": [
+          "Bedroom Lights"
+        ],
         "tv": [
           "Bedroom TV"
         ],
@@ -1276,6 +1279,9 @@
           "Lounge Lamps"
         ],
         "thelights": [
+          "Lounge Lights"
+        ],
+        "thelight": [
           "Lounge Lights"
         ],
         "thetv": [
